//
//proto3proto2
//protobuf
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//，protocgo
package go_protos;

option go_package = "./go_protos";

message BlockHead {
	 bytes              Hash              =1;  //hash
	 uint64             Height            =2;  //(，uint64)
	 uint64             GroupHeight       =3;  //
	 uint64             GroupHeightGrowth =4;  //。0（）,1
	 bytes              Previousblockhash =5;  //hash
	 bytes              Nextblockhash     =6;  //hash,，
	 uint64             NTx               =7;  //
	 bytes              MerkleRoot        =8;  //hash
	 repeated bytes     Tx                =9;  //id
	 int64              Time              =10;  //，unix
	 bytes              Witness           =11;  //
	 bytes              Sign              =12;  //，，。
}

